--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <table cellspacing="20">
             <tr>
                 <td><img src="images\mypic.jpg"  alt="Ted profile Pic"></td>
-                <td><h1>Ted Clay</h1>
+                <td><h1>Tedster </h1>
                     <p></p><em><a href="https://www.mssqltips.com/sqlservertip/6847/sql-server-database-administrator/">Database</a><strong> Administrator</strong></em></body></p>
                     <p>I am trying to learn something new. Need some sleep.</p>
                 </td>
@@ -30,18 +30,16 @@
             <tbody>
                 <tr>
                     <td>2022 - 2023 </td>
-                    <td>Lead DBA fiVISION</td>
+                    <td>Lead associate some company</td>
                 </tr>
                 <tr>
                     <td>2016 - 2022</td>
-                    <td>DBA Manage FIS</td>
+                    <td>Manager some company</td>
                 </tr>
             </tbody>
             <tfoot>
 
             </tfoot>
-
-            
         </table>
         <hr>
         <h3>Skills</h3>
